--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.1.7",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,6 +25,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-spinners": "^0.13.8",
     "swr": "^2.2.0",
+    "timeago.js": "^4.0.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
